--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,6 +2,7 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">www.wslphone.com</domain>
+        <domain includeSubdomains="true">172.26.224.1</domain>
         <trust-anchors>
             <certificates src="@raw/ca" />
         </trust-anchors>
